# PopFilter

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  audio.cpp  audio.h  fourier.cpp  fourier.h  headers.h  main.cpp  make.sh
util/: args_parser.cpp  args_parser.h  ringbuffer.cpp  ringbuffer.h  unittest.cpp
